--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1736,6 +1736,18 @@
   url       = {https://www.cs.york.ac.uk/gidy/articles/AISB09review.pdf},
 }
 
+@InCollection{Arkin1991,
+  author    = {Arkin, A. M. and Antrobus, J. S.},
+  title     = {The effects of external stimuli applied prior to and during sleep on sleep experience},
+  booktitle = {The mind in sleep: Psychology and psychophysiology},
+  publisher = {John Wiley \& Sons},
+  year      = {1991},
+  pages     = {265-307},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://psycnet.apa.org/record/1991-97116-008},
+}
+
 @Article{Armour2017,
   author    = {Armour, C. and Fried, E. I. and Deserno, M. K. and Tsai, J. and Pietrzak, R. H.},
   title     = {A network analysis of {DSM}-5 posttraumatic stress disorder symptoms and correlates in U.S. military veterans},
@@ -2772,6 +2784,16 @@
   url         = {https://ideas.repec.org/p/col/000089/002382.html},
 }
 
+@Book{Barrett2001,
+  title     = {The Committee of Sleep: How Artists, Scientists, and Athletes Use Dreams for Creative Problem-solving-- and how You Can, Too},
+  publisher = {Crown},
+  year      = {2001},
+  author    = {Barrett, D.},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://books.google.fr/books/about/The_Committee_of_Sleep.html?id=VKZWAAAAYAAJ},
+}
+
 @Article{Barroso2014,
   author    = {Barroso, A. and Giarratana, M. S. and Reis, S. and Sorenson, O.},
   title     = {Crowding, satiation, and saturation: The days of television series' lives},
@@ -3153,6 +3175,19 @@
   doi       = {10.1016/S0304-422X(99)00022-4},
   owner     = {Vincent},
   timestamp = {2018.06.08},
+}
+
+@Article{Bearman2004,
+  author    = {Bearman, P. S. and Moody, J. and Stovel, K.},
+  title     = {Chains of affection: The structure of adolescent romantic and sexual networks},
+  journal   = {American Journal of Sociology},
+  year      = {2004},
+  volume    = {110},
+  number    = {1},
+  pages     = {44-91},
+  doi       = {10.1086/386272},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Book{Beasley1990,
@@ -5432,6 +5467,19 @@
   timestamp    = {2022.01.28},
 }
 
+@Article{Braun1998,
+  author    = {Braun, A. R. and Balkin, T. J. and Wesensten, N. J. and Gwadry, F. and Carson, R. E. and Varga, M. and Baldwin, P. and Belenky, G. and Herscovitch, P.},
+  title     = {Dissociated Pattern of Activity in Visual Cortices and Their Projections During Human Rapid Eye Movement Sleep},
+  journal   = {Science},
+  year      = {1998},
+  volume    = {279},
+  number    = {5347},
+  pages     = {91-95},
+  doi       = {10.1126/science.279.5347.91},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @InProceedings{Brdiczka2006,
   author    = {Brdiczka, O. and Vaufreydaz, D. and Maisonnasse, J. and Reignier, P.},
   title     = {Unsupervised Segmentation of Meeting Configurations and Activities using Speech Activity Detection},
@@ -5519,6 +5567,19 @@
   owner     = {Vincent},
   timestamp = {2020.07.22},
   url       = {https://www.degruyter.com/view/title/37578},
+}
+
+@Article{Brewer2000,
+  author    = {Brewer, D. D.},
+  title     = {Forgetting in the recall-based elicitation of personal and social networks},
+  journal   = {Social Networks},
+  year      = {2000},
+  volume    = {22},
+  number    = {1},
+  pages     = {29-43},
+  doi       = {10.1016/s0378-8733(99)00017-9},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{Brezovnik2015,
@@ -8471,6 +8532,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://psycnet.apa.org/record/1961-35078-000},
 }
 
+@Article{Collins1975,
+  author    = {Collins, A. M. and Loftus, E. F.},
+  title     = {A spreading-activation theory of semantic processing.},
+  journal   = {Psychological Review},
+  year      = {1975},
+  volume    = {82},
+  number    = {6},
+  pages     = {407-428},
+  doi       = {10.1037/0033-295x.82.6.407},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @InProceedings{Collins2002,
   author    = {Collins, M. and Duffy, N.},
   title     = {New ranking algorithms for parsing and tagging: kernels over discrete structures, and the voted perceptron},
@@ -10553,6 +10627,26 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1038/ncomms7868},
   owner     = {Vincent},
   timestamp = {2015.07.06},
+}
+
+@Book{Domhoff1996,
+  title     = {Finding meaning in dreams: A quantitative approach},
+  publisher = {Plenum},
+  year      = {1996},
+  author    = {Domhoff, G. W.},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://books.google.fr/books/about/Finding_Meaning_in_Dreams_A_Quantitative.html?id=1u_yQvhDaHEC},
+}
+
+@Book{Domhoff2003,
+  title     = {The Scientific Study of Dreams: Neural Networks, Cognitive Development, and Content Analysis},
+  publisher = {APA},
+  year      = {2003},
+  author    = {Domhoff, G. W.},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://www.apa.org/pubs/books/431688A},
 }
 
 @InProceedings{Domingos2001,
@@ -13559,6 +13653,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.02},
 }
 
+@Article{Fosse2003,
+  author    = {Fosse, M. J. and Fosse, R. and Hobson, J. A. and Stickgold, R. J.},
+  title     = {Dreaming and Episodic Memory: A Functional Dissociation?},
+  journal   = {Journal of Cognitive Neuroscience},
+  year      = {2003},
+  volume    = {15},
+  number    = {1},
+  pages     = {1-9},
+  doi       = {10.1162/089892903321107774},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Article{Foster2004,
   author    = {Foster, E. K.},
   title     = {Research on Gossip: Taxonomy, Methods, and Future Directions},
@@ -13580,6 +13687,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2021.09.22},
   url       = {https://books.google.fr/books/about/Society_Must_Be_Defended.html?id=3mRWbdxo9JMC},
+}
+
+@Book{Foulkes1985,
+  title     = {Dreaming: A cognitive-psychological analysis},
+  publisher = {Routledge},
+  year      = {1985},
+  author    = {Foulkes, D.},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://www.routledge.com/Dreaming-A-Cognitive-psychological-Analysis/Foulkes/p/book/9780898595536},
 }
 
 @Book{Fowler1982,
@@ -15863,6 +15980,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.09.22},
 }
 
+@Article{Grenier2005,
+  author    = {Grenier, J. and Cappeliez, P. and St-Onge, M. and Vachon, J. and Vinette, S. and Roussy, F. and Mercier, P. and Lortie-Lussier, M. and De Koninck, J.},
+  title     = {Temporal references in dreams and autobiographical memory},
+  journal   = {Memory \& Cognition},
+  year      = {2005},
+  volume    = {33},
+  number    = {2},
+  pages     = {280-288},
+  doi       = {10.3758/bf03195317},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Article{Greteman2015,
   author    = {Greteman, B.},
   title     = {Milton and the Early Modern Social Network: The Case of the Epitaphium Damonis},
@@ -16468,6 +16598,26 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.27},
 }
 
+@Book{Hall1966,
+  title     = {The content analysis of dreams},
+  publisher = {Appleton-Century-Crofts},
+  year      = {1966},
+  author    = {Hall, C. S. and Van de Castle, R. L.},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://psycnet.apa.org/record/1966-06183-000},
+}
+
+@Book{Hall1972,
+  title     = {The individual and his dreams},
+  publisher = {New American Library},
+  year      = {1972},
+  author    = {Hall, C. S. and Nordby, V. J.},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://books.google.fr/books/about/THE_INDIVIDUAL_AND_HIS_DREAMS.html?id=A1VI7nqZkJ0C},
+}
+
 @Article{Hall2009,
   author    = {Hall, M. and Frank, E. and Holmes, G. and Pfahringer, B. and Reutemann, P. and Witten, I. H.},
   title     = {The {WEKA} data mining software},
@@ -16583,6 +16733,32 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/C2009-0-61819-5},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Han2015b,
+  author    = {Han, H. J. and Schweickert, R. and Xi, Z. and Viau-Quesnel, C.},
+  title     = {The Cognitive Social Network in Dreams: Transitivity, Assortativity, and Giant Component Proportion Are Monotonic},
+  journal   = {Cognitive Science},
+  year      = {2015},
+  volume    = {40},
+  number    = {3},
+  pages     = {671-696},
+  doi       = {10.1111/cogs.12244},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
+@Article{Han2016,
+  author    = {Han, H. J. and Schweickert, R.},
+  title     = {Continuity: Knowing each other, emotional closeness, and appearing together in dreams},
+  journal   = {Dreaming},
+  year      = {2016},
+  volume    = {26},
+  number    = {4},
+  pages     = {299-307},
+  doi       = {10.1037/drm0000038},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{Han2017,
@@ -17802,6 +17978,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1177/0265407509105524},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Hobson1977,
+  author    = {Hobson, J. A. and McCarley, R. W.},
+  title     = {The brain as a dream state generator: an activation-synthesis hypothesis of the dream process},
+  journal   = {American Journal of Psychiatry},
+  year      = {1977},
+  volume    = {134},
+  number    = {12},
+  pages     = {1335-1348},
+  doi       = {10.1176/ajp.134.12.1335},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
+@Book{Hobson1988,
+  title     = {The dreaming brain},
+  publisher = {Basic Books},
+  year      = {1988},
+  author    = {Hobson, J. A.},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://psycnet.apa.org/record/1988-97471-000},
 }
 
 @Book{Hochman1985,
@@ -19806,6 +20005,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://wipfandstock.com/9781579102746/the-purpose-of-the-biblical-genealogies/},
 }
 
+@Book{Johnson2005,
+  title     = {Univariate Discrete Distributions},
+  publisher = {John Wiley \& Sons},
+  year      = {2005},
+  author    = {Johnson, N. L. and Kemp, A. W. and Kotz, S.},
+  doi       = {10.1002/0471715816},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Article{Johnson2010,
   author    = {Johnson, S. and Torres, J. J. and Marro, J. and Miguel Muñoz, A.},
   title     = {Entropic Origin of Disassortativity in Complex Networks},
@@ -20949,6 +21158,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1515/cllt.2005.1.2.263},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Killworth1976,
+  author    = {Killworth, P. D. and Bernard, H. R.},
+  title     = {Informant accuracy in social network data},
+  journal   = {Human Organization},
+  year      = {1976},
+  volume    = {35},
+  number    = {3},
+  pages     = {269-286},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://www.jstor.org/stable/44125464},
 }
 
 @InProceedings{Kim2004,
@@ -22393,6 +22615,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icctide.2016.7725363},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@Article{Kumbasar1994,
+  author    = {Kumbasar, E. and Rommey, A. K. and Batchelder, W. H.},
+  title     = {Systematic Biases in Social Perception},
+  journal   = {American Journal of Sociology},
+  year      = {1994},
+  volume    = {100},
+  number    = {2},
+  pages     = {477-505},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://www.jstor.org/stable/2782077},
 }
 
 @InProceedings{Kunegis2009,
@@ -27549,6 +27784,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://tspace.library.utoronto.ca/handle/1807/33818},
 }
 
+@Article{McNamara2005,
+  author    = {McNamara, P. and McLaren, D. and Smith, D. and Brown, A. and Stickgold, R.},
+  title     = {A ``Jekyll and Hyde'' Within: Aggressive Versus Friendly Interactions in REM and Non-REM Dreams},
+  journal   = {Psychological Science},
+  year      = {2005},
+  volume    = {16},
+  number    = {2},
+  pages     = {130-136},
+  doi       = {10.1111/j.0956-7976.2005.00793.x},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Electronic{McNary2019,
   author       = {McNary, D.},
   month        = {01},
@@ -30015,6 +30263,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/PhysRevE.66.035101},
   owner     = {Vincent},
   timestamp = {2010.10.04},
+}
+
+@Article{Newman2002e,
+  author    = {Newman, M. E. J. and Watts, D. J. and Strogatz, S. H.},
+  title     = {Random graph models of social networks},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2002},
+  volume    = {99},
+  pages     = {2566-2572},
+  doi       = {10.1073/pnas.012582999},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @InCollection{Newman2003,
@@ -35535,6 +35795,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.23},
 }
 
+@InCollection{Rumelhart1972,
+  author    = {Rumelhart, D. E. and Lindsay, P. and Norman, D. A.},
+  title     = {A process model for long-term memory},
+  booktitle = {Organization of memory},
+  publisher = {Academic Press},
+  year      = {1972},
+  pages     = {197-246},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://psycnet.apa.org/record/1973-08477-006},
+}
+
 @Article{Rumelhart1980,
   author    = {Rumelhart, D. E.},
   title     = {On Evaluating Story Grammars{\ast}},
@@ -36446,6 +36718,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.27},
 }
 
+@Article{Schilling2005,
+  author    = {Schilling, M. A.},
+  title     = {A ``Small-World'' Network Model of Cognitive Insight},
+  journal   = {Creativity Research Journal},
+  year      = {2005},
+  volume    = {17},
+  number    = {2-3},
+  pages     = {131-154},
+  doi       = {10.1080/10400419.2005.9651475},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Article{Schmader2015,
   author    = {Schmader, T. and Berry Mendes, W.},
   title     = {Putting Feelings in a Social Context: Three Case Studies Applying Gross's Extended Model of Emotion Regulation},
@@ -36828,9 +37113,57 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   booktitle = {The Foundations of Remembering},
   publisher = {Psychology Press},
   year      = {2007},
+  doi       = {10.4324/9780203837672-22},
   owner     = {Vincent},
   timestamp = {2022.04.04},
-  url       = {https://www.taylorfrancis.com/chapters/mono/10.4324/9780203837672-22/structure-semantic-phonological-networks-structure-social-network-dreams-james-nairne},
+}
+
+@Article{Schweickert2007b,
+  author    = {Schweickert, R.},
+  title     = {Properties of the organization of memory for people: Evidence from dream reports},
+  journal   = {Psychonomic Bulletin \& Review},
+  year      = {2007},
+  volume    = {14},
+  number    = {2},
+  pages     = {270-276},
+  doi       = {10.3758/bf03194063},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
+@InCollection{Schweickert2012,
+  author    = {Schweickert, R.},
+  title     = {Social network analysis of dream content},
+  booktitle = {Encyclopedia of Sleep and Dreams: The Evolution, Function, Nature, and Mysteries of Slumber},
+  publisher = {Praeger Press},
+  year      = {2012},
+  volume    = {2},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+  url       = {https://books.google.fr/books?id=fRI1bycEjYgC},
+}
+
+@InCollection{Schweickert2019,
+  author    = {Schweickert, R. and Han, H. J. and Xi, Z. and Viau-Quesnel, C.},
+  title     = {Dreaming as a Random Walk through the Dreamer’s Associative Network},
+  booktitle = {Network Science in Cognitive Psychology},
+  publisher = {Routledge},
+  year      = {2019},
+  doi       = {10.4324/9780367853259-5},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
+@Article{Schweickert2020,
+  author    = {Schweickert, R/ and Xi, Z. and Viau-Quesnel, C. and Zheng, X.},
+  title     = {Power law distribution of frequencies of characters in dreams explained by random walk on semantic network},
+  journal   = {International Journal of Dream Research},
+  year      = {2020},
+  volume    = {13},
+  pages     = {2},
+  doi       = {10.11588/IJODR.2020.2.71370},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{Schweinberger2011,
@@ -37243,6 +37576,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://www.cambridge.org/core/books/understanding-machine-learning/3059695661405D25673058E43C8BE2A6},
+}
+
+@InProceedings{Shambharkar2020,
+  author    = {Shambharkar, P. G. and Gupta, A. and Gupta, A. and {Anshuman} and Doja, M. N.},
+  title     = {Understanding and Analyzing Methods of Character Identification in Movies},
+  booktitle = {4th International Conference on Intelligent Computing and Control Systems},
+  year      = {2020},
+  pages     = {788-795},
+  doi       = {10.1109/iciccs48265.2020.9121122},
+  owner     = {Vincent},
+  timestamp = {2020.06.23},
 }
 
 @InProceedings{Shang2012,
@@ -38511,6 +38855,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.digra.org/digital-library/publications/interactive-digital-storytelling-towards-a-hybrid-conceptual-approach/},
 }
 
+@Article{Sporns2000,
+  author    = {Sporns, O.},
+  title     = {Theoretical Neuroanatomy: Relating Anatomical and Functional Connectivity in Graphs and Cortical Connection Matrices},
+  journal   = {Cerebral Cortex},
+  year      = {2000},
+  volume    = {10},
+  number    = {2},
+  pages     = {127-141},
+  doi       = {10.1093/cercor/10.2.127},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Article{Sporns2002,
   author    = {Sporns, O.},
   title     = {Network analysis, complexity, and brain function},
@@ -38836,6 +39193,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.dialog-21.ru/media/3431/stepanovameetal.pdf},
 }
 
+@Article{Stephan2000,
+  author    = {Stephan, K. E. and Hilgetag, C.-C. and Burns, G. A. P. C. and O'Neill, M. A. and Young, M. P. and Kotter, R.},
+  title     = {Computational analysis of functional connectivity between areas of primate cerebral cortex},
+  journal   = {Philosophical Transactions of the Royal Society of London. Series B: Biological Sciences},
+  year      = {2000},
+  volume    = {355},
+  number    = {1393},
+  pages     = {111-126},
+  doi       = {10.1098/rstb.2000.0552},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @Article{Stephen2009,
   author    = {Stephen, A. T. and Toubia, O.},
   title     = {Explaining the power-law degree distribution in a social commerce network},
@@ -38891,6 +39261,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1207/s15516709cog2901_3},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Steyvers2005a,
+  author    = {Steyvers, M. and Tenenbaum, J. B.},
+  title     = {The Large-Scale Structure of Semantic Networks: Statistical Analyses and a Model of Semantic Growth},
+  journal   = {Cognitive Science},
+  year      = {2005},
+  volume    = {29},
+  number    = {1},
+  pages     = {41-78},
+  doi       = {10.1207/s15516709cog2901_3},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{Stiller2003,
@@ -41164,6 +41547,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/icsc.2007.42},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Tsonis2004,
+  author    = {Tsonis, P. A. and Tsonis, A. A.},
+  title     = {A ``Small-World'' Network Hypothesis for Memory and Dreams},
+  journal   = {Perspectives in Biology and Medicine},
+  year      = {2004},
+  volume    = {47},
+  number    = {2},
+  pages     = {176-180},
+  doi       = {10.1353/pbm.2004.0036},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Article{Tsoumakas2007,
@@ -46078,6 +46474,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.18},
   url       = {https://mitpress.mit.edu/books/psycho-biology-language},
+}
+
+@Article{Zipf1945,
+  author    = {Zipf, G. K.},
+  title     = {The Meaning-Frequency Relationship of Words},
+  journal   = {Journal of General Psychology},
+  year      = {1945},
+  volume    = {33},
+  number    = {2},
+  pages     = {251-256},
+  doi       = {10.1080/00221309.1945.10544509},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
 }
 
 @Book{Zipf1949,
