--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -37131,6 +37131,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.21},
 }
 
+@Article{Schweickert2009,
+  author    = {Schweickert, R. and Xi, Z.},
+  title     = {Metamorphosed Characters in Dreams: Constraints of Conceptual Structure and Amount of Theory of Mind},
+  journal   = {Cognitive Science},
+  year      = {2009},
+  volume    = {34},
+  number    = {4},
+  pages     = {665-684},
+  doi       = {10.1111/j.1551-6709.2009.01082.x},
+  owner     = {Vincent},
+  timestamp = {2022.06.21},
+}
+
 @InCollection{Schweickert2012,
   author    = {Schweickert, R.},
   title     = {Social network analysis of dream content},
@@ -39261,19 +39274,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1207/s15516709cog2901_3},
   owner     = {Vincent},
   timestamp = {2020.01.05},
-}
-
-@Article{Steyvers2005a,
-  author    = {Steyvers, M. and Tenenbaum, J. B.},
-  title     = {The Large-Scale Structure of Semantic Networks: Statistical Analyses and a Model of Semantic Growth},
-  journal   = {Cognitive Science},
-  year      = {2005},
-  volume    = {29},
-  number    = {1},
-  pages     = {41-78},
-  doi       = {10.1207/s15516709cog2901_3},
-  owner     = {Vincent},
-  timestamp = {2022.06.21},
 }
 
 @Article{Stiller2003,
